force-app/main/default/objects/PBS_AAAP_Other_Costs__c/PBS_AAAP_Other_Costs__c.object-meta.xml
<CustomObject>
    <description>AAAP - This object stores the various &quot;other costs&quot; associated with an offer.</description>
    <label>Other Cost</label>
    <nameField>
        <label>Other Costs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>