force-app/main/default/objects/PBS_AAAP_Other_Costs__c/fields/PBS_AAAP_COST__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COST__c</fullName>
    <description>Enter cost</description>
    <label>Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>