force-app/main/default/objects/PBS_AAAP_Other_Costs__c/fields/PBS_AAAP_COST_REMOVAL__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COST_REMOVAL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by applications to store information during runtime.</description>
    <label>Cost Removal Utility Field</label>
    <type>Checkbox</type>
</CustomField>