force-app/main/default/objects/PBS_AAAP_Other_Costs__c/fields/PBS_AAAP_COST_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COST_TYPE__c</fullName>
    <label>Cost Type</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>