force-app/main/default/objects/PBS_AAAP_Other_Costs__c/fields/PBS_AAAP_OFFER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OFFER_NUMBER__c</fullName>
    <description>Offer number for which the other cost applies.</description>
    <label>Offer Number</label>
    <referenceTo>PBS_AAAP_Offer__c</referenceTo>
    <relationshipLabel>Other Costs</relationshipLabel>
    <relationshipName>Other_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>