force-app/main/default/objects/PBS_AAAP_Other_Costs__c/fields/PBS_AAAP_SHORT_DESC__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_SHORT_DESC__c</fullName>
    <description>Enter a short description for the cost</description>
    <label>Short Description</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>